[tool.poetry]
name = "teller-cli"
version = "0.1.0"
description = ""
authors = ["JakePIXL <jakewjevans@gmail.com>"]
readme = "README.md"
packages = [{include = "teller_cli"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.7.0"}
httpx = "^0.23.3"
keyring = "^23.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
