[tool.poetry]
name = "teller-cli"
version = "0.3.10"
description = ""
authors = ["JakePIXL <jakewjevans@gmail.com>"]
readme = "README.md"
packages = [{include = "teller_cli"}]

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.7.0"}
httpx = "^0.23.3"
keyring = "^23.13.1"
nbtlib = "^2.0.4"
nanoid = "^2.0.0"
python-slugify = "^8.0.1"
prompt-toolkit = "^3.0.38"
nanoid-dictionary = "^2.4.0"

[tool.poetry.scripts]
teller-cli = "teller_cli:app"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
